--- a/motivus-api/src/main/resources/application.yml
+++ b/motivus-api/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
     show-sql: true
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQLDialect
+app:
+  imagenes:
+    directorio-base: D:/tmp/motivus/
